using Java 17, made all tests working again, handle deprecation warnings