@@ -45,7 +45,7 @@ public class JaninoObjectCreator
 		Class clazz = getClass(aClassname);
 		try
 		{
-			return clazz.newInstance();
+			return clazz.getDeclaredConstructor().newInstance();
 		}
 		catch (Exception e)
 		{
